PPJ/polinomi/c/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Naredba '\n' Program
    2        | Naredba '\n'

    3 Naredba: polinom
    4        | id_token ':' '=' polinom
    5        | polinom '=' '=' polinom
    6        | polinom '!' '=' polinom

    7 polinom: '<' NizKoeficijenata '>'
    8        | polinom '+' polinom
    9        | polinom '-' polinom
   10        | polinom '*' polinom
   11        | '-' polinom
   12        | '(' polinom ')'
   13        | id_token

   14 NizKoeficijenata: NizKoeficijenata ',' br_token
   15                 | br_token


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '!' (33) 6
    '(' (40) 12
    ')' (41) 12
    '*' (42) 10
    '+' (43) 8
    ',' (44) 14
    '-' (45) 9 11
    ':' (58) 4
    '<' (60) 7
    '=' (61) 4 5 6
    '>' (62) 7
    error (256)
    br_token <d_vrednost> (258) 14 15
    id_token <s> (259) 4 13
    UNMIN (260)


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    Program (19)
        on left: 1 2
        on right: 0 1
    Naredba (20)
        on left: 3 4 5 6
        on right: 1 2
    polinom <p_vrednost> (21)
        on left: 7 8 9 10 11 12 13
        on right: 3 4 5 6 8 9 10 11 12
    NizKoeficijenata <p_vrednost> (22)
        on left: 14 15
        on right: 7 14


State 0

    0 $accept: . Program $end

    id_token  shift, and go to state 1
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    Program  go to state 5
    Naredba  go to state 6
    polinom  go to state 7


State 1

    4 Naredba: id_token . ':' '=' polinom
   13 polinom: id_token .

    ':'  shift, and go to state 8

    $default  reduce using rule 13 (polinom)


State 2

   11 polinom: '-' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 10


State 3

    7 polinom: '<' . NizKoeficijenata '>'

    br_token  shift, and go to state 11

    NizKoeficijenata  go to state 12


State 4

   12 polinom: '(' . polinom ')'

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 13


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 6

    1 Program: Naredba . '\n' Program
    2        | Naredba . '\n'

    '\n'  shift, and go to state 15


State 7

    3 Naredba: polinom .
    5        | polinom . '=' '=' polinom
    6        | polinom . '!' '=' polinom
    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18
    '='  shift, and go to state 19
    '!'  shift, and go to state 20

    $default  reduce using rule 3 (Naredba)


State 8

    4 Naredba: id_token ':' . '=' polinom

    '='  shift, and go to state 21


State 9

   13 polinom: id_token .

    $default  reduce using rule 13 (polinom)


State 10

    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom
   11        | '-' polinom .

    $default  reduce using rule 11 (polinom)


State 11

   15 NizKoeficijenata: br_token .

    $default  reduce using rule 15 (NizKoeficijenata)


State 12

    7 polinom: '<' NizKoeficijenata . '>'
   14 NizKoeficijenata: NizKoeficijenata . ',' br_token

    '>'  shift, and go to state 22
    ','  shift, and go to state 23


State 13

    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom
   12        | '(' polinom . ')'

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18
    ')'  shift, and go to state 24


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    1 Program: Naredba '\n' . Program
    2        | Naredba '\n' .

    id_token  shift, and go to state 1
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    $default  reduce using rule 2 (Program)

    Program  go to state 25
    Naredba  go to state 6
    polinom  go to state 7


State 16

    8 polinom: polinom '+' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 26


State 17

    9 polinom: polinom '-' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 27


State 18

   10 polinom: polinom '*' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 28


State 19

    5 Naredba: polinom '=' . '=' polinom

    '='  shift, and go to state 29


State 20

    6 Naredba: polinom '!' . '=' polinom

    '='  shift, and go to state 30


State 21

    4 Naredba: id_token ':' '=' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 31


State 22

    7 polinom: '<' NizKoeficijenata '>' .

    $default  reduce using rule 7 (polinom)


State 23

   14 NizKoeficijenata: NizKoeficijenata ',' . br_token

    br_token  shift, and go to state 32


State 24

   12 polinom: '(' polinom ')' .

    $default  reduce using rule 12 (polinom)


State 25

    1 Program: Naredba '\n' Program .

    $default  reduce using rule 1 (Program)


State 26

    8 polinom: polinom . '+' polinom
    8        | polinom '+' polinom .
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom

    '*'  shift, and go to state 18

    $default  reduce using rule 8 (polinom)


State 27

    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
    9        | polinom '-' polinom .
   10        | polinom . '*' polinom

    '*'  shift, and go to state 18

    $default  reduce using rule 9 (polinom)


State 28

    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom
   10        | polinom '*' polinom .

    $default  reduce using rule 10 (polinom)


State 29

    5 Naredba: polinom '=' '=' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 33


State 30

    6 Naredba: polinom '!' '=' . polinom

    id_token  shift, and go to state 9
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4

    polinom  go to state 34


State 31

    4 Naredba: id_token ':' '=' polinom .
    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18

    $default  reduce using rule 4 (Naredba)


State 32

   14 NizKoeficijenata: NizKoeficijenata ',' br_token .

    $default  reduce using rule 14 (NizKoeficijenata)


State 33

    5 Naredba: polinom '=' '=' polinom .
    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18

    $default  reduce using rule 5 (Naredba)


State 34

    6 Naredba: polinom '!' '=' polinom .
    8 polinom: polinom . '+' polinom
    9        | polinom . '-' polinom
   10        | polinom . '*' polinom

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18

    $default  reduce using rule 6 (Naredba)
